add CNAME file and modify package

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://katawa-shoujo-stories-beyond.com/",
+  "homepage": "https://khai2002.github.io/Katawa-Shoujo-Web",
   "name": "ks-game",
   "version": "0.1.0",
   "private": true,
